--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -78,7 +78,7 @@
                             <td><%= intel[i].Comment %></td>
                             <% if (role == 3) { %>
                             <td><%= intel[i].Author_Name %></td>
-                            <td class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button onclick="rmop('<%= intel[i]._id %>')" style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
+                            <td style="min-width: 120px;" class="dt-center"><div><button id='' onclick="modaledit(<%= JSON.stringify(intel[i]) %>)" data-toggle="modal" data-target="#editmodal" type="button" class="btn btn-primary btn-sm btn-outline-info">Edit</button><button onclick="rmop('<%= intel[i]._id %>')" style='margin-left: 1em;'type="button" class="btn btn-outline-danger btn-sm">Remove</button></div></td>
                             <% } %>
                         </tr>
                         <% } %>
