--- a/public/view/Intel.html
+++ b/public/view/Intel.html
@@ -256,8 +256,8 @@
     
 
     $(document).ready( function () {
-        $('#Date').bootstrapMaterialDatePicker({ format : 'YYYY/MM/DD HH:mm' });
-        $('#eDate').bootstrapMaterialDatePicker({ format : 'YYYY/MM/DD HH:mm' });
+        $('#Date').bootstrapMaterialDatePicker({ format : 'YYYY-MM-DD HH:mm' });
+        $('#eDate').bootstrapMaterialDatePicker({ format : 'YYYY-MM-DD HH:mm' });
         $('#table_id').DataTable({
             responsive: true
         });
