--- a/public/view/admin.html
+++ b/public/view/admin.html
@@ -107,9 +107,11 @@
                                         <select class="form-control" id="role" name="role">
                                             <option value="-1">Black List</option>
                                             <option value="0">Spy</option>
+                                             <% if (role == 3) { %>
                                             <option value="1">Strat FC</option>
                                             <option value="2">Handler</option>
                                             <option value="3">Admin</option>
+                                             <% } %>
                                         </select>
                                     </div>
                                     <div class="form-group">
